@@ -81,6 +81,15 @@ let force_lazy_block blk = force_gen_lazy_block ~only_val:false blk
    declared as a primitive whose code inlines the tag tests of its
    argument, except when afl instrumentation is turned on. *)
 let force_gen ~only_val (lzv : 'arg lazy_t) =
+  (* Using [Sys.opaque_identity] prevents two potential problems:
+     - If the value is known to have Forward_tag, then it could have been
+       shorcut during GC, so that information must be forgotten (see GPR#713
+       and issue #7301). This is not an issue here at the moment since
+       [Obj.tag] is not simplified by the compiler, and GPR#713 also
+       ensures that no value will be known to have Forward_tag.
+     - If the value is known to be immutable, then if the compiler
+       cannot prove that the last branch is not taken it will issue a
+       warning 59 (modification of an immutable value) *)
   let lzv = Sys.opaque_identity lzv in
   let x = Obj.repr lzv in
   (* START no safe points. If a GC occurs here, then the object [x] may be
