@@ -8,9 +8,9 @@
          [0: "anonymous.ml" 35 6] [0: [0]]))
     (seq (ignore (let (x = [0: 4 2]) (makeblock 0 x)))
       (apply (field_imm 1 (global CamlinternalMod!)) [0: [0]] A
-        (module-defn(A) anonymous.ml(23):567-608 A))
+        (module-defn(A) Anonymous anonymous.ml(23):567-608 A))
       (apply (field_imm 1 (global CamlinternalMod!)) [0: [0]] B
-        (module-defn(B) anonymous.ml(33):703-773
+        (module-defn(B) Anonymous anonymous.ml(33):703-773
           (let (x = [0: "foo" "bar"]) (makeblock 0))))
       (let (f = (function param : int 0) s = (makemutable 0 ""))
         (seq
@@ -18,5 +18,5 @@
             (let (*match* = (setfield_ptr 0 s "Hello World!")) (makeblock 0)))
           (let
             (drop = (function param : int 0)
-             *match* = (apply drop (field 0 s)))
+             *match* = (apply drop (field_mut 0 s)))
             (makeblock 0 A B f s drop)))))))
